# QuickGraphicsMath

./: CMakeLists.txt  QuickMathCpp.sln  QuickMathCpp.vcxproj  QuickMathCpp.vcxproj.filters  README.md
includes/: defines.hpp  math.hpp  matrix.hpp  trigonometry.hpp  vector.hpp
includes/qgm/: defines.hpp  math.hpp  matrix.hpp  mesh.hpp  random.hpp  vector.hpp
includes/qgm/mesh/: mesh.hpp  quad_mesh.hpp  triangle_mesh.hpp
test/: main.cpp
tests/: math_test.cpp  matrix_test.cpp  mesh_test.cpp  random_test.cpp  vector_test.cpp
